--- a/database.yml
+++ b/database.yml
@@ -5,7 +5,7 @@ development:
   host: "localhost"
   port: "3306"
   user: "root"
-  password: "root"
+  # password: "root"
 
 test:
   dialect: "mysql"
@@ -21,7 +21,7 @@ test:
   host: "localhost"
   port: "3306"
   user: "root"
-  password: "root"
+  # password: "root"
 
 production:
   #
